src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ABN__c</fullName>
        <label>ABN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <externalId>true</externalId>
        <label>Account ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Claimed_by_Organisation__c</fullName>
        <label>Total Amount Claimed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Remaining__c</fullName>
        <label>Amount Remaining</label>
        <summarizedField>Special_Assistance__c.Amount_Remaining__c</summarizedField>
        <summaryFilterItems>
            <field>Special_Assistance__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Special_Assistance__c.Dealer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Remaining_by_Organisation__c</fullName>
        <label>Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Requested_by_Organisation__c</fullName>
        <label>Total Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Development_Manager__c</fullName>
        <label>Business Development Manager</label>
        <picklist>
            <picklistValues>
                <fullName>BDM 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matthew Baily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linda Beach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shannon Bell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craig Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peter Coorey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paul Coulton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paul Crowley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peter Dimopoulos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pep Giorgio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrew Ivers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paul Jenkins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jason Koster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marcel Lal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kate Lucas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vicki Murphy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mishelle Oberscheider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carolyn Rayner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark Shepherd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin Thomson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Darin Watson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stuart Webster</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Large Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not for Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Acessories_Policy__c</fullName>
        <label>Company Acessories Policy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Colour_Policy__c</fullName>
        <label>Company Colour Policy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company Change Over Policy</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Contracted_OEM__c</fullName>
        <label>Current contracted OEM</label>
        <picklist>
            <picklistValues>
                <fullName>Toyota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huyndai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitsubushi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mazda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VW</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Current_Fleet_Model_Notes__c</fullName>
        <label>Current Fleet Model Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_preferred_vehicle_model__c</fullName>
        <label>Current preferred vehicle model</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DBD_RMTC_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this organisation part of the Database Department RMTC Campaign?</description>
        <label>DBD RMTC Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <label>DUNS</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Approved_in_Mainframe__c</fullName>
        <label>Date Approved in Mainframe</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entitled_to_Pricing_Hierarchy__c</fullName>
        <label>Entitled to Pricing Hierarchy</label>
        <picklist>
            <picklistValues>
                <fullName>Premuim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEAF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Est_contract_end_date__c</fullName>
        <inlineHelpText>Date you expect current contract with other OEM will finish</inlineHelpText>
        <label>Est. contract end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_a_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has a Contract?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Contract_Tender_run__c</fullName>
        <label>Last contract tender run</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Make_up_of_Current_Fleet__c</fullName>
        <label>Make up of Current Fleet</label>
        <picklist>
            <picklistValues>
                <fullName>Toyota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitsubishi</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Market_Approach__c</fullName>
        <label>Market Approach</label>
        <picklist>
            <picklistValues>
                <fullName>Tender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk Purchase Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>individual Quote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nissan_Global_Relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this organisation have a Global Relationship with Nissan?</inlineHelpText>
        <label>Nissan Global Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Light_25K__c</fullName>
        <label>No of Light &lt; $25K</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Light_buses_20_seats__c</fullName>
        <label>No of Light buses &lt; 20 seats</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Meduim_60K__c</fullName>
        <label>No of Meduim &lt; $60K</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_PU_CC_4x2__c</fullName>
        <label>No of PU/CC 4x2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_PU_CC_4x4__c</fullName>
        <label>No of PU/CC 4x4</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_People_Movers_55K__c</fullName>
        <label>No of People Movers &lt; $55K</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_SUV_Large_70K__c</fullName>
        <label>No of SUV Large &lt; $70K</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_SUV_Medium_60K__c</fullName>
        <label>No of SUV Medium &lt; $60K</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_SUV_Upper_Large_100K__c</fullName>
        <label>No of SUV Upper Large &lt; $100K</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Sports_80K__c</fullName>
        <label>No of Sports &lt; $80K</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Vans_CC_2_5_3_5t__c</fullName>
        <label>No of Vans/CC 2.5-3.5t</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Vehicles_Claimed__c</fullName>
        <label>Number of Vehicles Claimed</label>
        <summarizedField>Special_Assistance__c.Vehicles_Claimed__c</summarizedField>
        <summaryFilterItems>
            <field>Special_Assistance__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Special_Assistance__c.Dealer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Vehicles_in_Company_Fleet__c</fullName>
        <label>Number of Vehicles in Company Fleet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Vehicles_in_Private_Names__c</fullName>
        <label>Number of Vehicles in Private Names</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Vehicles_remaining__c</fullName>
        <label>Number of Vehicles remaining</label>
        <summarizedField>Special_Assistance__c.Vehicles_Remaining__c</summarizedField>
        <summaryFilterItems>
            <field>Special_Assistance__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Special_Assistance__c.Dealer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Office_Locations__c</fullName>
        <label>Office Locations</label>
        <picklist>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organisation_Region__c</fullName>
        <formula>TEXT(Primary_Dealer__r.Region__c)</formula>
        <label>Organisation Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation_Type__c</fullName>
        <label>Organisation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Id__c</fullName>
        <externalId>true</externalId>
        <label>Parent Account Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this the Parent Account?</description>
        <label>Is this the Parent Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Organisations</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prospect_Type__c</fullName>
        <description>What type of campaign would you target contacts within this organisation with?</description>
        <label>Prospect Type</label>
        <picklist>
            <picklistValues>
                <fullName>H60A Navara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T32 X-Trail Diesel</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regional_Fleet_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Fleet Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <label>Sales Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Small_40K__c</fullName>
        <label>No of Small &lt; $40K</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARTS FREEZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VEHICLES FREEZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARTS &amp; VEHICLE FREEZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CURRENT DEALER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEASED TRADING</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Claimed__c</fullName>
        <inlineHelpText>Total amount claimed by dealer</inlineHelpText>
        <label>Total Amount Claimed</label>
        <summarizedField>Special_Assistance__c.Amount_Claimed__c</summarizedField>
        <summaryFilterItems>
            <field>Special_Assistance__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Special_Assistance__c.Dealer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Approved_Amount__c</fullName>
        <inlineHelpText>Total approved amount of special assistance for this dealer.</inlineHelpText>
        <label>Total Approved Amount</label>
        <summarizedField>Special_Assistance__c.Amount_Requested__c</summarizedField>
        <summaryFilterItems>
            <field>Special_Assistance__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Special_Assistance__c.Dealer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Novated_Fleet_size__c</fullName>
        <label>Total Novated Fleet size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tool_of_Trade_fleet_size__c</fullName>
        <label>Total Tool of Trade fleet size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicles_Approved__c</fullName>
        <label>Number of Vehicles Approved</label>
        <summarizedField>Special_Assistance__c.Vehicles_Requested__c</summarizedField>
        <summaryFilterItems>
            <field>Special_Assistance__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Special_Assistance__c.Dealer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vehicles_Approved_for_Organisation__c</fullName>
        <label>Number of Vehicles Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicles_Claimed_by_Organisation__c</fullName>
        <label>Number of Vehicles Claimed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicles_Remaining_by_Organisation__c</fullName>
        <label>Number of Vehicles remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Accounts_created_by_Jenny</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Has_a_Contract__c</columns>
        <columns>Parent_Account__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Jenny</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>Jenny</value>
        </filters>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>11/8/2013 12:13 PM</value>
        </filters>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>11/8/2013 12:14 PM</value>
        </filters>
        <label>Accounts created by Jenny</label>
    </listViews>
    <listViews>
        <fullName>Accounts_last_modified_by_Jenny</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Has_a_Contract__c</columns>
        <columns>Parent_Account__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>Jenny</value>
        </filters>
        <filters>
            <field>ACCOUNT.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>11/8/2013 12:13 PM</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>notEqual</operation>
            <value>Jenny</value>
        </filters>
        <label>Accounts last modified by Jenny</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Has_a_Contract__c</columns>
        <columns>Parent_Account__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Competitors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Competitor</value>
        </filters>
        <label>Competitors</label>
    </listViews>
    <listViews>
        <fullName>Dealers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Region__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Account_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Regional_Fleet_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Dealer</value>
        </filters>
        <label>Dealers</label>
    </listViews>
    <listViews>
        <fullName>Direct</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Region__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Account_ID__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Direct</value>
        </filters>
        <label>Direct</label>
    </listViews>
    <listViews>
        <fullName>FMO_Organisations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Sales_Type__c</columns>
        <columns>Classification__c</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.FMO_Organisation</value>
        </filters>
        <label>FMO Organisations</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Organisations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Channel__c</columns>
        <columns>Has_a_Contract__c</columns>
        <columns>Sales_Type__c</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>Classification__c</columns>
        <columns>Status__c</columns>
        <columns>DBD_RMTC_Campaign__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organisation</value>
        </filters>
        <label>Organisations</label>
    </listViews>
    <recordTypes>
        <fullName>Competitor</fullName>
        <active>true</active>
        <label>Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dealer</fullName>
        <active>true</active>
        <description>Nissan Dealers</description>
        <label>Dealer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Direct</fullName>
        <active>true</active>
        <description>Used for organisations who purchase direct</description>
        <label>Direct</label>
    </recordTypes>
    <recordTypes>
        <fullName>Expired_Dealer</fullName>
        <active>true</active>
        <label>Expired Dealer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Expired_Direct</fullName>
        <active>true</active>
        <label>Expired Direct</label>
    </recordTypes>
    <recordTypes>
        <fullName>Expired_FMO</fullName>
        <active>true</active>
        <label>Expired FMO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Expired_Organisation</fullName>
        <active>true</active>
        <label>Expired Organisation</label>
    </recordTypes>
    <recordTypes>
        <fullName>FMO_Organisation</fullName>
        <active>true</active>
        <description>Fleet Management Organisations</description>
        <label>FMO Organisation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organisation</fullName>
        <active>true</active>
        <label>Organisation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ABN_must_be_numeric</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISNUMBER(ABN__c ))</errorConditionFormula>
        <errorMessage>ABN must be numeric</errorMessage>
    </validationRules>
</CustomObject>